# repro_rules_nodejs_module_mapping

./: BUILD.bazel  WORKSPACE  defs_1_1.bzl  defs_1_6.bzl  package.json  uselib.ts
mylib/: BUILD.bazel  index.ts  tsconfig.json
